Remove --add-opens flag for Java 8 compatibility with ModTheSpire