@@ -133,7 +133,6 @@ launch_worker() {
         XDG_CONFIG_HOME="$config_dir" \
         xvfb-run -a \
             java -Xmx512m -Xms256m \
-            --add-opens java.base/java.lang=ALL-UNNAMED \
             -jar ModTheSpire.jar \
             --skip-launcher \
             --mods basemod,CommunicationMod,superfastmode \
